--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "br.com.caiosabino.pais_comida"
+        applicationId "br.com.caiosabino.comidas"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
